@@ -38,3 +38,8 @@ Feature: Button
     | param1  | param2  |
     | class   | index   |
     | name    | index   |
+
+  @locator
+  Scenario: Finding a button dynamically
+    When I find a button while the script is executing
+    Then I should be able to click the button element
