@@ -1,0 +1,7 @@
+module Druid
+  module ElementLocators
+    def button(identifier)
+      button_for identifier
+    end
+  end
+end
