@@ -1,3 +1,7 @@
+=== 2016-07-11
+* Enhancements
+  * Added the following instance methods to Druid
+  * #button
 === 2016-07-05
 * Enhancements
   * Added #value= to TextField and TextArea
